# group_project_2025

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  download_Fermi_Data.py  fermi_data_exploration.py  fermi_data_wrangling.py  fermi_download_data_functions.py  fermi_gw_time_correlation.py  fermi_loc_prob_display.py  fermi_location_data.py  fermi_poshist_data.py  fermi_position_predictor.py  fermi_time_correlation_analysis.py  fermi_time_data.py  fermi_tte_data.py  getgwtotaldata.ipynb  plot_prob_distribution.py  pyproject.toml  requirements.txt  two_point_correlation.py
.github/: ISSUE_TEMPLATE.md
demo/: extract_grb_pht_cnt.ipynb  fermi_data_exploration.ipynb  fermi_data_exploration.py  fermi_position_predictor.ipynb  fermi_position_predictor.py  getgw2data.ipynb  getgwc1data.ipynb  getgwc3data.ipynb  gravitational_gamma_angcorr.py  time_and_angular_correlation_analysis.ipynb  time_correlation_analysis.ipynb
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
gw_grb_correlation/: __init__.py  gravitational_gamma_angcorr.py
gw_grb_correlation/Fermi/: __init__.py  data_preprocessing.py  download_data_functions.py  location_data.py  poshist_data.py  time_data.py  trigger_data.py  tte_data.py  util.py  visualization.py
tests/: __init__.py  test_example.py  test_fermi_data.py
