[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gw_grb_correlation*"]

[project]
name = "gw_grb_correlation"
version = "0.1.0"
description = "this is a project studying cross-correlation between GW and GRB"
readme = "README.rst"
authors = [
  {name = "Wen-Hua Wu", email = "aw106@rice.edu"}
]
maintainers = [
  {name = "Stephen Gulley", email = "sg230@rice.edu"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  "astropy==5.3.4",
  "beautifulsoup4==4.12.3",
  "matplotlib==3.8.3",
  "numpy==1.26.4",
  "pandas==2.2.1",
  "tqdm==4.66.2",
  "requests==2.31.0",
  "gdown==4.7.1",
  "tensorflow==2.19.0"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/CrazyAncestor, gulley-s/gw_grb_correlation/issues"
changelog = "https://github.com/CrazyAncestor, gulley-s/gw_grb_correlation/blob/master/changelog.md"
homepage = "https://github.com/CrazyAncestor, gulley-s/gw_grb_correlation"


[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

